--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
+
 {
   "name": "sinergiia-api",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",x
+"start": "node index.js"
   },
   "keywords": [],
   "author": "",
